                                                        -*- coding: utf-8 -*-
Changes with Apache 2.3.0
[ When backported to 2.2.x, remove entry from this file ]

  *) mod_ssl: Fix TLS upgrade (RFC 2817) support.  PR 41231.  [Joe Orton]

  *) scoreboard: Correctly declare ap_time_process_request.
     PR 43789 [Tom Donovan <Tom.Donovan acm.org>]

  *) mod_ldap: Give callers a reference to data copied into the request
     pool instead of references directly into the cache
     PR 43786 [Eric Covener]

  *) mod_ldap: Stop passing a reference to pconf around for
     (limited) use during request processing, avoiding possible 
     memory corruption and crashes.  [Eric Covener]

  *) mod_status: Add SeeRequestTail directive, which determines if
     ExtendedStatus displays the 1st 63 characters of the request
     or the last 63. Useful for those requests with large string
     lengths and which only vary with the last several characters.
     [Jim Jagielski]

  *) mod_proxy: add "nocanon" keyword to ProxyPass, to suppress
     URI-canonicalisation in a reverse proxy.
     PR 41798 [Nick Kew]

  *) core; scoreboard: ap_get_scoreboard_worker(sbh) now takes the sbh member
     from the connection rec, ap_get_scoreboard_worker(proc, thread) will now
     provide the unusual legacy lookup.  [William Rowe]

  *) mod_proxy_http: Don't escape/unescape forward-proxied URLs
     PR 42592 [Nick Kew]

  *) mpm winnt: fix null pointer dereference
     PR 42572 [Davi Arnaut]

  *) mod_proxy_http: Correctly forward unexpected interim (HTTP 1xx)
     responses from the backend according to RFC2616.  But make it
     configurable in case something breaks on it.
     PR 16518 [Nick Kew]

  *) mod_deflate: Don't leave a strong ETag in place while transforming
     the entity.
     PR 39727 [Nick Kew]

  *) core: reinstate location walk to fix config for subrequests
     PR 41960 [Jose Kahan <jose w3.org>]

  *) mod_log_config: Add format options for %p so that the actual local